--- a/static/index.html
+++ b/static/index.html
@@ -1,9 +1,8 @@
-<html>
+<html data-theme="dark">
   <head>
     <title>Euphoria Development | Paste</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="solarized_dark.css" />
     <link rel="stylesheet" type="text/css" href="application.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/daisyui@4.5.0/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -25,9 +24,9 @@
 		  theme: {
 			extend: {}
 		  },
-		  daisyui: {
-			themes: ["dark"]
-		  }
+			daisyui: {
+          		themes: ["dark"]
+        	}
 		}
 	</script>
 	<script type="text/javascript">
